--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,49 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@charset "utf-8";
+/*------------------
+Created:2017/09/10
+author:chenxiangtian
+email:chenxiangtian@pushthink.com
+website:http://www.pushthink.com
+-----------------*/
+body,h1,h2,h3,h4,h5,h6,p,dl,dt,dd,ul,ol,li,form,button,input,textarea,th,td{margin:0;padding:0}
+body,button,input,select,textarea{font:12px \5FAE\8F6F\96C5\9ED1,arial,\5b8b\4f53}
+h1,h2,h3,h4,h5,h6{font-size:100%}
+address,cite,dfn,em,var,i{font-style:normal}
+kbd,pre,samp{font-family:courier new,courier,monospace,arial,\5b8b\4f53}
+form{display:inline}
+small{font-size:12px}
+ul,ol{list-style:none}
+b{font-weight:normal;font-weight:inherit;}
+a{text-decoration:none;color:#333}
+a:hover{text-decoration:none;}
+sup{vertical-align:text-top}
+sub{vertical-align:text-bottom}
+img{vertical-align:top;border:0;-ms-interpolation-mode:bicubic}
+button,input,select,textarea{font-size:100%}
+table{border-collapse:collapse;border-spacing:0}
+input,button,select,textarea{outline:none}
+textarea{resize:none}
+.clearfix{*zoom:1}
+.clearfix:after{content:'\20';display:block;height:0;clear:both}
+.hidden{display:none}
+
+
+:-moz-placeholder {
+    color: #bababa;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+::-moz-placeholder {
+    color: #bababa;
+}
+
+input:-ms-input-placeholder{
+    color: #bababa;
+}
+
+input::-webkit-input-placeholder{
+    color: #bababa;
+}
+
+input:-webkit-autofill {
+-webkit-box-shadow: 0 0 0px 1000px white inset;
 }
